contact page added
Added contact, buttons, Email, much more...

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Welcome to SkyHigh Aviation!</h1>
+    <p>Your journey to owning the skies starts here.</p>
+
+    <div class="linkrow">
+        <a href="shop.html">Buy a Plane today!</a>
+        <a href="contact.html">Contact</a> 
+    </div>
 </body>
 </html>
